--- a/AnomalyDetectionManager/AnomalyDetection.Manager/appsettings.json
+++ b/AnomalyDetectionManager/AnomalyDetection.Manager/appsettings.json
@@ -7,5 +7,20 @@
     }
   },
   "AllowedHosts": "*",
-  "KubeConfigPath" : ""
+  "TrainingJobOptions": {
+    "Image": "alpine",
+    "KubeNamespace": "kube-anomaly-detection",
+    "ImagePullPolicy": "IfNotPresent",
+    "RestartPolicy": "Never",
+    "StartImmediate": true,
+    "Env": {
+      "Name": "env_name",
+      "Value": "env_value"
+    },
+    "Args": []
+  },
+  "KubernetesConnectionOptions": {
+    "InCluster": false,
+    "KubeConfigPath": "minikube.kubeconfig.yaml"
+  }
 }
