--- a/AnomalyDetectionManager/AnomalyDetection.Data/AnomalyDetection.Data.csproj
+++ b/AnomalyDetectionManager/AnomalyDetection.Data/AnomalyDetection.Data.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="KubernetesClient" Version="6.0.1" />
+  </ItemGroup>
+
 </Project>
