Database integration with EFCore

--- a/.gitignore
+++ b/.gitignore
@@ -449,3 +449,6 @@ $RECYCLE.BIN/
 AnomalyDetectionManager/curl_tests.sh
 AnomalyDetectionManager/minikube.kubeconfig.yaml
 AnomalyDetectionManager/.vscode/solution-explorer/
+AnomalyDetectionManager/AnomalyDetection.Manager/ManagerDB.db
+AnomalyDetectionManager/AnomalyDetection.Manager/ManagerDB.db-wal
+AnomalyDetectionManager/AnomalyDetection.Manager/ManagerDB.db-shm
