--- a/AnomalyDetectionManager/AnomalyDetection.Data/AnomalyDetection.Data.csproj
+++ b/AnomalyDetectionManager/AnomalyDetection.Data/AnomalyDetection.Data.csproj
@@ -7,6 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="KubernetesClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.9" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
   </ItemGroup>
 
 </Project>
