--- a/AnomalyDetectionManager/AnomalyDetection.Manager.Acceptance.Tests/AnomalyDetection.Manager.Acceptance.Tests.csproj
+++ b/AnomalyDetectionManager/AnomalyDetection.Manager.Acceptance.Tests/AnomalyDetection.Manager.Acceptance.Tests.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="moq" Version="4.16.1" />
     <PackageReference Include="RESTFulSense" Version="1.9.0" />
