--- a/AnomalyDetectionManager/AnomalyDetection.Manager/AnomalyDetection.Manager.csproj
+++ b/AnomalyDetectionManager/AnomalyDetection.Manager/AnomalyDetection.Manager.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="KubernetesClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
