lots of improvements

--- a/AnomalyDetectionManager/AnomalyDetection.Manager/appsettings.Development.json
+++ b/AnomalyDetectionManager/AnomalyDetection.Manager/appsettings.Development.json
@@ -4,7 +4,8 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "AnomalyDetection": "Debug"
+      "AnomalyDetection": "Debug",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*",
