start working on operator and kubectl plugin

--- a/AnomalyDetectionOperator/Makefile
+++ b/AnomalyDetectionOperator/Makefile
@@ -63,7 +63,7 @@ build: generate fmt vet ## Build manager binary.
 	go build -o bin/manager main.go
 
 run: manifests generate fmt vet ## Run a controller from your host.
-	go run ./main.go
+	go run ./main.go --config  ./config/manager/controller_manager_config.yaml
 
 dry-run: manifests
 	cd config/manager && kustomize edit set image controller=${IMG}
