--- a/AnomalyDetectionOperator/config/crd/kustomization.yaml
+++ b/AnomalyDetectionOperator/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/anomalydetection.andreee94.ml_trainers.yaml
 - bases/anomalydetection.andreee94.ml_datasources.yaml
+# - bases/config.andreee94.ml_anomalydetectionconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -11,12 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_trainers.yaml
 #- patches/webhook_in_datasources.yaml
+#- patches/webhook_in_anomalydetectionconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_trainers.yaml
 #- patches/cainjection_in_datasources.yaml
+#- patches/cainjection_in_anomalydetectionconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
